# NL2SQL

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  README.md  docker-compose.prod.yml
.cursor/skills/backend-agents/: SKILL.md
.cursor/skills/backend-api/: SKILL.md
.cursor/skills/backend-db/: SKILL.md
.cursor/skills/backend-nlp/: SKILL.md
.cursor/skills/frontend-components/: SKILL.md
.cursor/skills/frontend-pages/: SKILL.md
.cursor/skills/overview/: SKILL.md
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements-prod.txt  requirements.txt
backend/agents/: formatter_agent.py  graph.py  schema_agent.py  sql_agent.py  state.py
backend/api/: auth.py  query.py  router.py  schema.py  system.py
backend/chains/: sql_chain.py  summary_chain.py
backend/db/: base.py  engine.py
backend/db/crud/: query_crud.py  user_crud.py
backend/db/models/: __init__.py  course.py  query_history.py  schema_meta.py  score.py  student.py  teacher.py  user.py
backend/lib/: response.py  security.py  sql_validator.py
backend/nlp/: entities.py  intent.py  tokenizer.py  user_dict.txt
backend/prompts/: README.md  __init__.py  formatter.py  sql.py
backend/tests/: conftest.py  test_agents.py  test_api_auth.py  test_api_query.py  test_db.py  test_e2e_flow.py  test_nlp.py  test_sql_validator.py
docker/: docker-compose.yml
docker/init/: 01_schema.sql  02_data.sql
frontend/: Dockerfile  index.html  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/api/: auth.ts  (+3 more)
(+24 files in other folders)
